--- a/main.css
+++ b/main.css
@@ -16,13 +16,7 @@ header {
   background-size: cover;
 }
 
-.content {
-  width: 94%;
-  margin: 4em auto;
-  font-size: 20px;
-  line-height: 30px;
-  text-align: justify;
-}
+
 
 .logo {
   line-height: 60px;
@@ -33,15 +27,18 @@ header {
   font-weight: bold;
   font-size: 20px;
   letter-spacing: 2px;
+  text-decoration: none;
 }
 
 nav {
+  text-decoration: none;
   position: fixed;
   width: 100%;
   line-height: 60px;
 }
 
 nav ul {
+  text-decoration: none;
   line-height: 60px;
   list-style: none;
   background: rgba(255, 255, 255, 0);
@@ -59,6 +56,7 @@ nav.black ul {
 }
 
 nav ul li {
+  text-decoration: none;
   display: inline-block;
   padding: 16px 40px;;
 }
@@ -70,6 +68,7 @@ nav ul li a {
 }
 
 .menu-icon {
+  text-decoration: none;
   line-height: 60px;
   width: 100%;
   background: #000;
@@ -80,44 +79,146 @@ nav ul li a {
   color: #fff;
   display: none;
 }
+a {
+  color: #fff;
+  text-transform: uppercase;
+  text-decoration: none;
+  letter-spacing: .25em;
+  display: inline-block;
+  
+  position: relative;
+}
+a:hover::after {
+  width: 100%;
+  right: 0;
+  text-decoration: none;
+}
 
+a::after {
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 2px;
+  right: 0;
+  position: absolute;
+  background: linear-gradient(to left, #f69ec4, #f9dd94 100%);
+  transition: width .5s ease 0s, right .5s ease 0s;
+  width: 0;
+  text-decoration: none;
+}
+.button {
+  border-radius: 100px;
+  height: 80px;
+  width: 200px;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin-left: 280px;
+  cursor: pointer;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  background: linear-gradient(-45deg,#ff5b70,#f4d293,#c1946a,#dd4b5f);
+background-size: 400% 400%;
+animation: Gradient 15s ease infinite;
+background-repeat: no-repeat;
+}
+.button2{
+  margin-left: 80px;
+}
+@-webkit-keyframes Gradient{
+0%{
+background-position: 0% 50%
+}
+50%{
+background-position: 100% 50%}
+100%{
+  background-position: 0% 50%;
+}
+}
+.button1:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.button2:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
 @media(max-width: 786px) {
   header {
+    position: static;
     width: 100%;
     height: 120%;
     background: url(Images/christopher-sardegna-bSmKli4OTIY-unsplash.jpg) no-repeat 50% 50%;
     background-size: cover;
   }
   .logo {
+    padding-top: 30px;
         position: fixed;
         top: 0;
         margin-top: 1px;
   }
 
   nav ul {
+    
         max-height: 0px;
         background: #000;
   }
 
   nav.black ul {
-        background: transparent;
+    position: fixed;
+        background: black;
   }
-
+  .button {
+    border-radius: 100px;
+    position: static;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    background: linear-gradient(-45deg,#ff5b70,#f4d293,#c1946a,#dd4b5f);
+  background-size: 400% 400%;
+  animation: Gradient 15s ease infinite;
+  background-repeat: no-repeat;
+  }
+  @-webkit-keyframes Gradient{
+  0%{
+  background-position: 0% 50%
+  }
+  50%{
+  background-position: 100% 50%}
+  100%{
+    background-position: 0% 50%;
+  }
+}
   .showing {
-        max-height: 45em;
+        max-height: 54em;
+        
   }
 
   nav ul li {
+    
         box-sizing: border-box;
-        width: 100%;
-        padding: 24px;
+        width: 50%;
+        padding: 3px;
         text-align: center;
   }
 
   .menu-icon {
+    padding-top: 50px;
         display: block;
   }
   nav ul li a {
+    
     text-decoration: none;
     color: white;
     font-size: 16px;
@@ -126,7 +227,7 @@ nav ul li a {
 .Text-box{
   display: inline-block;
   bottom: 20%;
-  position: static;;
+  position: static ;
     color: rgb(0, 0, 0);
     padding: 18px;
     font-size: 25px;
@@ -134,8 +235,9 @@ nav ul li a {
     
 }
 .Text-box p{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif, Courier, monospace;
   text-align: left;
-  font-size: 80px;
+  font-size: 120px;
   font-weight: 600;
 }
 
@@ -155,19 +257,22 @@ nav ul li a {
   }
 }
 .Text-box h3{
-  color: rgb(255, 255, 255);
+  font-family: 'Times New Roman', Times, serif;
+  color: rgb(250, 0, 104);
   font-size: 25px;
   font-weight: 500px;
   padding-left: 4px;
 }
 .row{
-  padding-left: 6px;
+  font-family: 'Times New Roman', Times, serif;
+  padding-left: 19px;
+  color: azure;
 }
 
 @media(max-width: 786px){
   .Text-box{
     display: inline-block;
-    position: static;;
+    position: static;
       color: rgb(0, 0, 0);
       padding: 18px;
       font-size: 25px;
@@ -182,7 +287,7 @@ nav ul li a {
       }
       .Text-box h1{
         font-size: 18vw;
-      font-family: 'Courier New', Courier, monospace;
+      
         
         
         -webkit-text-stroke: 1px rgb(0, 0, 0);
@@ -204,6 +309,7 @@ nav ul li a {
         font-weight: 500px;
       }
       .row{
+        color: white;
         padding-left: 19px;
       }
 }
