--- a/Styles/about.css
+++ b/Styles/about.css
@@ -1,28 +1,70 @@
-
-  #about h1{
-font-size: 50px;
-padding-left:30px ;
-float: left;
-align-content: flex-start;
-justify-content: right;
-  }
-  #about p {
-      padding-top: 200px;
-      justify-content: right;
-   
-    color: #999;
-    display: flexbox;
-    float:right;
+#about .block-effect {
+    font-size: 50px;
+    
   }
   
-  #about img{
-      width: 400px;
-      height: 300px;
-      float:left;
-      position: relative;
-      padding-right: 100px;
-      padding-bottom: 50px;
+  #about .block-reveal {
+    --t: calc(var(--td) + var(--d));
+  
+    color: transparent;
+    padding: 4px;
+  
+    position: relative;
+    overflow: hidden;
+  
+    animation: revealBlock 5s var(--t) forwards;
   }
-  #about .para{
-      float: left;
+  
+  #about .block-reveal::after {
+    content: '';
+  
+    width: 0%;
+    height: 100%;
+    padding-bottom: 4px;
+  
+    position: absolute;
+    top: 0;
+    left: 0;
+  
+    background: var(--bc);
+    animation: revealingIn var(--td) var(--d) forwards, revealingOut var(--td) var(--t) forwards;
+  }
+  
+  
+  /* animations */
+  @keyframes revealBlock {
+    100% {
+      color: #0f0f0f;
+    }
+  }
+  
+  @keyframes revealingIn {
+  
+    0% {
+      width: 0;
+    }
+  
+    100% {
+      width: 100%;
+    }
+  }
+  
+  @keyframes revealingOut {
+  
+    0% {
+      transform: translateX(0);
+    }
+  
+    100% {
+      transform: translateX(100%);
+    }
+  
+  }
+  .split body{
+    margin:0;
+  }
+  .split{
+    height: 100vh;
+    background: rgb(255, 255, 255);
+    box-sizing: border-box;
   }
