--- a/Styles/main.css
+++ b/Styles/main.css
@@ -3,7 +3,10 @@ html, body {
   padding: 0;
   width: 100%;
 }
-
+*{
+  margin: 0px;
+  padding: 0px;
+}
 body {
   font-family: "Helvetica Neue",sans-serif;
   font-weight: lighter;
@@ -22,11 +25,11 @@ header {
   line-height: 60px;
   position: fixed;
   float: left;
-  margin: 16px 46px;
+  margin: 16px ;
   color: black;
   font-weight: bold;
   font-size: 20px;
-  letter-spacing: 2px;
+ padding-left: 12px;
   text-decoration: none;
 }
 
@@ -35,13 +38,14 @@ nav {
   position: fixed;
   width: 100%;
   line-height: 60px;
+  z-index: 300;
 }
 
 nav ul {
   text-decoration: none;
   line-height: 60px;
   list-style: none;
-  background: rgba(255, 255, 255, 0);
+  background: rgba(231, 223, 223, 0);
   overflow: hidden;
   color: rgb(238, 236, 236);
   padding: 0;
@@ -53,7 +57,7 @@ nav ul {
 
 nav.black ul {
   background: rgb(255, 255, 255);
-  
+  z-index: 0 ;
 }
 
 nav ul li {
@@ -165,12 +169,12 @@ background-position: 100% 50%}
   nav ul {
     
         max-height: 0px;
-        background: #000;
+        background: rgb(243, 236, 236);
   }
 
   nav.black ul {
     position: fixed;
-        background: black;
+        background: rgb(241, 241, 241);
   }
   .button {
     border-radius: 100px;
@@ -183,6 +187,7 @@ background-position: 100% 50%}
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    
     margin: 4px 2px;
     cursor: pointer;
     -webkit-transition-duration: 0.4s; /* Safari */
@@ -238,22 +243,23 @@ background-position: 100% 50%}
     letter-spacing: 10px;
     
 }
-.Text-box p{
+.Text-box .bold{
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif, Courier, monospace;
   text-align: left;
-  font-size: 120px;
+  font-size: 80px;
   font-weight: 600;
+  padding-left: 8px;
 }
 
 .Text-box h1{
-  font-size: 100px;
-  
+  font-size: 180px;
+  margin-top: -50px;
   color: transparent;
   -webkit-text-stroke: 1px rgb(0, 0, 0);
-  background:url(Images/back.png);
+  background:url(Images/stripes2.png);
   -webkit-background-clip: text;
   background-position: 0 0;
-  animation: back 20s linear infinite;
+  animation: back 30s linear infinite;
 }
 @keyframes back{
   100%{
@@ -261,15 +267,14 @@ background-position: 100% 50%}
   }
 }
 .Text-box h3{
-  font-family: 'Times New Roman', Times, serif;
-  color: rgb(250, 0, 104);
+  color: rgb(0, 0, 0);
   font-size: 25px;
   font-weight: 500px;
-  padding-left: 4px;
+  padding-left: 11px;
 }
 .row{
   font-family: 'Times New Roman', Times, serif;
-  padding-left: 19px;
+  padding-left: 22px;
   color: azure;
 }
 
@@ -295,7 +300,7 @@ background-position: 100% 50%}
         
         
         -webkit-text-stroke: 1px rgb(0, 0, 0);
-        background:url(Images/back.png);
+        background:url(Images/stripes2.png);
         -webkit-background-clip: text;
         background-position: 0 0;
         animation: back 20s linear infinite;
@@ -317,33 +322,325 @@ background-position: 100% 50%}
         padding-left: 19px;
       }
 }
-
-
-section {
-  display: flex;
-  margin-bottom: 20px;
-  flex-direction: column;
-  padding-top: 30px;
-  padding-left: 30px;
-  min-height: 98vh;
-  box-shadow: 0 3px 8px 0 rgb(15 15 20 / 20%);
-}
-
-.content main {
-  width: 100%;
-  background-color: var(--blueGray2);
-  padding: 10px;
-  box-shadow: 0 3px 8px 0 rgb(15 15 20 / 20%);
-}
-
-.section-heading {
-  /* border-bottom: 2px solid #999; */
- 
-  margin-bottom: 40px;
-  color: #999;
-  text-transform: uppercase;
-  font-size: large;
-}
-
-
 /* About Page */
+.fwh-slide body{
+  margin:0;
+}
+.fwh-slide{
+  height: 100vh;
+  background: red;
+  box-sizing: border-box;
+}
+.fwh-slide--bg-blue{
+  background: blue;
+  color: white;
+}
+.fwh-slide p{
+  margin: 0;
+}
+.fwh-slide p{
+  margin: 0;
+}
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  width: 100px;
+  height: 100px;
+  position: static;
+  display: inline-block;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+  padding: 2px 16px;
+}
+.testimonial_section {
+  box-sizing: border-box;
+  height: 100vh;
+}
+.testimonial_section:after {
+  display: block;
+  clear: both;
+  content: "";
+}
+.testimonial_section .about_content {
+  background-color: #dd4b5f;
+  padding-top: 77px;
+  padding-right: 210px;
+  padding-bottom: 62px;
+  margin-bottom: 0px;
+  position: relative;
+}
+.testimonial_section .about_content .background_layer {
+  background-color: #dd4b5f;
+  width: auto;
+  margin-left: -200px;
+  right: 0;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0px;
+ 
+  left: 0;
+}
+.testimonial_section .about_content .layer_content {
+  position: relative;
+  z-index: 9;
+  height: 100%;
+}
+.testimonial_section .about_content .layer_content .section_title {
+  margin-bottom: 24px;
+  position: relative;
+}
+.testimonial_section .about_content .layer_content .section_title:after {
+  display: block;
+  clear: both;
+  content: "";
+}
+.testimonial_section .about_content .layer_content .section_title h5 {
+  color: rgb(17, 9, 9);
+  font-family: "Open Sans";
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 28px;
+  color: #818a8f;
+  margin-top: -5px;
+  margin-bottom: 6px;
+}
+.testimonial_section .about_content .layer_content .section_title h2 {
+  font-family: "Titillium Web";
+  font-weight: 300;
+  font-size: 45px;
+  line-height: 50px;
+  padding-bottom: 51px;
+  margin-bottom: 0px;
+  color: #fff;
+}
+.testimonial_section .about_content .layer_content .section_title h2 strong {
+  font-weight: 600 !important;
+  width: 100%;
+  display: block;
+}
+.testimonial_section .about_content .layer_content .section_title .heading_line {
+  position: relative;
+}
+.testimonial_section .about_content .layer_content .section_title .heading_line span {
+  transition: all 0.5s ease-in-out 0s;
+  position: relative;
+}
+.testimonial_section .about_content .layer_content .section_title .heading_line span:after {
+  content: "";
+  right: auto;
+  left: 69px;
+  position: absolute;
+  bottom: 28px;
+  width: 17px;
+  margin-left: 0;
+  border-bottom-width: 3px;
+  border-bottom-color: #cacaca;
+  border-bottom-style: solid;
+}
+.testimonial_section .about_content .layer_content .section_title .heading_line:after {
+  content: "";
+  left: 1%;
+  margin-left: 0;
+  position: absolute;
+  bottom: 28px;
+  width: 59px;
+  border-bottom-width: 3px;
+  border-bottom-style: solid;
+  border-bottom-color: #ff5e14;
+}
+.testimonial_section .about_content .layer_content .section_title p {
+  color: #fff;
+  margin: 0 0 15px;
+}
+.testimonial_section .about_content .layer_content a {
+  color: #fff;
+  text-transform: capitalize;
+  font-size: 15px;
+  font-weight: 600;
+  text-decoration: none;
+  transition: all 0.3s;
+}
+.testimonial_section .about_content .layer_content a i {
+  font-size: 18px;
+  vertical-align: middle;
+}
+.testimonial_section .about_content .layer_content a:hover {
+  color: #ff5e14;
+}
+.testimonial_section .testimonial_box {
+  margin-top: 60px !important;
+  position: relative;
+}
+.testimonial_section .testimonial_box .testimonial_container {
+  background-color: #ff5e14;
+  margin-left: -170px !important;
+  position: relative;
+}
+.testimonial_section .testimonial_box .testimonial_container .background_layer {
+  background-color: #ff5e14;
+  width: auto;
+  margin-right: -200px;
+  right: 0;
+  background-image: url(../images/map.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: absolute;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+.testimonial_section .testimonial_box .testimonial_container .layer_content {
+  position: relative;
+  z-index: 9;
+  height: 100%;
+}
+.testimonial_section .testimonial_box .testimonial_container .layer_content .testimonial_owlCarousel {
+  display: block;
+  position: relative;
+}
+.testimonial_section .testimonial_box .testimonial_container .layer_content .testimonial_owlCarousel .testimonials {
+  margin: 10px 0 10px 0;
+  padding: 62px 0px 72px 50px;
+  position: relative;
+  text-align: center;
+}
+.testimonial_section .testimonial_box .testimonial_container .layer_content .testimonial_owlCarousel .testimonials .testimonial_content {
+  box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.13);
+  margin-left: 150px;
+  margin-top: 69px;
+  padding: 45px 40px 45px 40px;
+  z-index: 1;
+  position: relative;
+  background-color: rgb(3, 17, 94);
+  transition: all 0.5s ease-in-out 0s;
+}
+.testimonial_section .testimonial_box .testimonial_container .layer_content .testimonial_owlCarousel .testimonials .testimonial_content .testimonial_caption {
+  margin-bottom: 15px;
+  position: relative;
+}
+.testimonial_section .testimonial_box .testimonial_container .layer_content .testimonial_owlCarousel .testimonials .testimonial_content .testimonial_caption:after {
+  content: "";
+  width: 30px;
+  display: block;
+  height: 2px;
+  text-align: center;
+  left: 46%;
+  margin-top: 6px;
+  background-color: #ff5e14;
+  position: absolute;
+}
+.testimonial_section .testimonial_box .testimonial_container .layer_content .testimonial_owlCarousel .testimonials .testimonial_content .testimonial_caption h6 {
+  padding-top: 0;
+  margin-bottom: -5px;
+  font-size: 19px;
+  font-weight: 600;
+  line-height: 24px;
+  color: #d2d4d6;
+}
+.testimonial_section .testimonial_box .testimonial_container .layer_content .testimonial_owlCarousel .testimonials .testimonial_content .testimonial_caption span {
+  font-size: 12px;
+  color: #9f9f9f;
+  margin: 0;
+}
+.testimonial_section .testimonial_box .testimonial_container .layer_content .testimonial_owlCarousel .testimonials .testimonial_content p {
+  padding: 0;
+  margin: 0;
+  padding-top: 10px;
+  font-size: 16px;
+  line-height: 28px;
+  font-weight: 400;
+  color: #ffffff;
+  font-style: italic;
+}
+.testimonial_section .testimonial_box .testimonial_container .layer_content .testimonial_owlCarousel .testimonials .images_box .testimonial_img {
+  border: none;
+  position: absolute;
+  top: 0;
+  left: 55px;
+  top: 80px;
+}
+.testimonial_section .testimonial_box .testimonial_container .layer_content .testimonial_owlCarousel .testimonials .images_box .testimonial_img img {
+  border: 5px solid #fff;
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.1);
+  width: 35%;
+}
+.testimonial_section .testimonial_box .testimonial_container .owl-nav .owl-prev {
+  position: absolute;
+  top: 165px;
+  right: 42px;
+  border-radius: 0;
+  background: #ff5e14;
+  display: block;
+  outline: 0;
+  width: 34px;
+  line-height: 34px;
+  height: 34px;
+  color: #fff;
+  font-size: 23px;
+  margin-top: -20px;
+  transition: all 0.3s ease-in-out;
+}
+.testimonial_section .testimonial_box .testimonial_container .owl-nav .owl-prev:hover {
+  background: #020d26;
+}
+.testimonial_section .testimonial_box .testimonial_container .owl-nav .owl-next {
+  position: absolute;
+  top: 165px;
+  right: 5px;
+  border-radius: 0;
+  display: block;
+  background: #ff5e14;
+  outline: 0;
+  width: 34px;
+  text-align: center;
+  line-height: 34px;
+  height: 34px;
+  color: #fff;
+  font-size: 23px;
+  margin-top: -20px;
+  transition: all 0.3s ease-in-out;
+}
+.testimonial_section .testimonial_box .testimonial_container .owl-nav .owl-next:hover {
+  background: #020d26;
+}
+.control{
+  margin-top: 180px;
+}
+@media all and (max-width: 991px) {
+  .testimonial_section .about_content {
+    padding-right: 15px !important;
+  }
+  .testimonial_section .about_content .background_layer {
+    width: 200% !important;
+  }
+  .testimonial_section .testimonial_box {
+    margin-top: 0 !important;
+  }
+  .testimonial_section .testimonial_box .background_layer {
+    width: 200% !important;
+    margin-left: -200px;
+  }
+  .testimonial_section .testimonial_box .about_content {
+    padding-left: 15px !important;
+    padding-right: 15px !important;
+    margin-top: 28% !important;
+  }
+  .testimonial_section .testimonial_box .testimonial_container {
+    margin-left: -15px !important;
+  }
+  .testimonial_section .testimonial_box .testimonial_container .testimonials {
+    margin: 0px 0 20px 0;
+  }
+  .testimonial_section .testimonial_box .testimonial_container .testimonials .testimonial_content {
+    margin-left: -36px !important;
+  }
+  .testimonial_section .testimonial_box .testimonial_container .testimonials .images_box {
+    display: none;
+  }
+}
