--- a/Styles/about.css
+++ b/Styles/about.css
@@ -65,6 +65,19 @@
   }
   .split{
     height: 100vh;
-    background: rgb(255, 255, 255);
-    box-sizing: border-box;
-  }
+      background: linear-gradient(-45deg,#f5967f,#f4d293,#c1946a,#fdb4be);
+      background-size: 400% 400%;
+      animation: Gradient 15s ease infinite;
+      background-repeat: no-repeat;
+      box-sizing: border-box;
+      }
+      @-webkit-keyframes Gradient{
+      0%{
+      background-position: 0% 50%
+      }
+      50%{
+      background-position: 100% 50%}
+      100%{
+        background-position: 0% 50%;
+      }
+    }
