--- a/Styles/main.css
+++ b/Styles/main.css
@@ -15,7 +15,7 @@ body {
 header {
   width: 100%;
   height: 100%;
-  background: url(Images/christopher-sardegna-bSmKli4OTIY-unsplash.jpg) no-repeat 100% 100%;
+  background: url(Images/christopher-sardegna-bSmKli4OTIY-unsplash.webp) no-repeat 100% 100%;
   background-size: cover;
 }
 
@@ -53,14 +53,17 @@ nav ul {
   margin: 0;
   padding-right: 40px;
   transition: 1s;
+  z-index: 300;
 }
 
 nav.black ul {
+  height: 100px;
   background: rgb(255, 255, 255);
   z-index: 0 ;
 }
 
 nav ul li {
+  height: 100px;
   text-decoration: none;
   display: inline-block;
   padding: 16px 40px;;
@@ -85,13 +88,34 @@ nav ul li a {
   display: none;
 }
 a {
+  height: 40px;
+  margin: 0px;
+  padding: 0px;
   color: #fff;
   text-transform: uppercase;
-  text-decoration: none;
+  text-decoration: none !important;
   letter-spacing: .25em;
   display: inline-block;
   
   position: relative;
+}
+.logo a:hover::after {
+  width: 100%;
+  right: 0;
+  text-decoration: none;
+}
+
+.logo a::after {
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 2px;
+  right: 0;
+  position: absolute;
+  
+  width: 0;
+  text-decoration: none;
 }
 a:hover::after {
   width: 100%;
@@ -328,11 +352,24 @@ background-position: 100% 50%}
 }
 .fwh-slide{
   height: 100vh;
-  background: red;
+  background: linear-gradient(-45deg,#f5967f,#f4d293,#c1946a,#fdb4be);
+  background-size: 400% 400%;
+  animation: Gradient 15s ease infinite;
+  background-repeat: no-repeat;
   box-sizing: border-box;
+  }
+  @-webkit-keyframes Gradient{
+  0%{
+  background-position: 0% 50%
+  }
+  50%{
+  background-position: 100% 50%}
+  100%{
+    background-position: 0% 50%;
+  }
 }
 .fwh-slide--bg-blue{
-  background: blue;
+  
   color: white;
 }
 .fwh-slide p{
@@ -357,8 +394,22 @@ background-position: 100% 50%}
   padding: 2px 16px;
 }
 .testimonial_section {
-  box-sizing: border-box;
   height: 100vh;
+  background: linear-gradient(-45deg,#f5967f,#f4d293,#c1946a,#fdb4be);
+  background-size: 400% 400%;
+  animation: Gradient 15s ease infinite;
+  background-repeat: no-repeat;
+  box-sizing: border-box;
+  }
+  @-webkit-keyframes Gradient{
+  0%{
+  background-position: 0% 50%
+  }
+  50%{
+  background-position: 100% 50%}
+  100%{
+    background-position: 0% 50%;
+  }
 }
 .testimonial_section:after {
   display: block;
@@ -367,9 +418,9 @@ background-position: 100% 50%}
 }
 .testimonial_section .about_content {
   background-color: #dd4b5f;
-  padding-top: 77px;
+  padding-top: 50px;
   padding-right: 210px;
-  padding-bottom: 62px;
+  padding-bottom: 0px;
   margin-bottom: 0px;
   position: relative;
 }
@@ -644,3 +695,420 @@ background-position: 100% 50%}
     display: none;
   }
 }
+/* Skills section */
+.skills-section{
+  
+  padding-top: 300px;
+  
+  }
+  
+  .skills-header{
+  text-align: center;
+  color: #fff;
+  padding: 1rem;
+  position: relative;
+  }
+  
+  .skills-header:after{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100px;
+  height: 4px;
+  background-color: #2ecc71;
+  border-radius: 2px;
+  }
+  
+  .skills-container{
+  display: grid;
+  grid-tempLate-columns: repeat(5, 1fr);
+  justify-content:center;
+  align-items:center;
+  text-align: center;
+  grid-gap:1rem;
+  padding: 1rem 80px;
+  padding-left:300px ;
+  font-size: 1.2rem;
+  }
+  .skills-box{
+  padding: 1rem;
+  color: #000;
+  cursor:pointer;
+  }
+
+  .skills-box:hover .skills-img{
+  transform: translateX(-20px);
+  }
+  
+  .skills-title{
+  display:flex;
+  flex-direction: column;
+  align-items:center;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+  position: relative;
+  }
+  
+  .skills-title:after{
+  content: '';
+  position:absolute;
+  bottom: 0;
+  right: 50%;
+  width:20px;
+  height:4px;
+  border-radius: 2px 0 0 2px;
+  background-color: #2ecc71;
+  transition: .5s;
+  }
+  
+  .skills-title:before{
+  content: '';
+  position:absolute;
+  bottom: 0;
+  left: 50%;
+  width:100px;
+  height:4px;
+  border-radius: 0 2px 2px 0;
+  background-color: #2ecc71;
+  }
+  
+  .skills-icons{
+  width:50px;
+  z-index:2;
+  }
+  
+  .skills-img{
+  width:90px;
+  height:90px;
+  position: relative;
+  border-radius: 45px;
+  background-color: #fff;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  transition: .5s;
+  }
+  
+  .skills-img:after{
+  content: '';
+  position:absolute;
+  top:0;
+  left: 0;
+  width:50%;
+  height:90px;
+  background: rgba(100, 100, 100, 0.5);
+  border-radius: 45px 0 0 45px;
+  }
+  .skills-title h3{
+  color: #333;
+  margin-top: 0.5rem;
+  }
+  @media screen and (max-width:990px){
+   .skills-container{
+   grid-tempLate-columns: repeat(2, 1fr);
+   padding: 2rem 50px;
+   }
+  }
+  
+  @media screen and (max-width:650px){
+   .skills-container{
+   grid-tempLate-columns:2fr;
+   padding: 2rem 50px;
+   }
+  }
+  /* Project */
+  img {
+    border: none;
+  }
+  
+  /*
+   * Common layout code
+   */
+  .grid {
+    padding-top: 300px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    margin: 40px auto;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  
+  /*
+   * Float layout
+   */
+  .grid {
+    padding-top: 350px;
+    width: 210px;
+  }
+  .grid .card {
+    float: left;
+    width: 210px;
+    height: 210px;
+    margin: 0;
+    margin-bottom: 10px;
+  }
+  .grid::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  @media screen and (min-width: 470px) {
+    .grid {
+      width: 430px;
+    }
+    .grid .card:nth-child(2n) {
+      margin-right: 10px;
+    }
+    .grid .header {
+      width: 430px;
+      height: 430px;
+    }
+  }
+  @media screen and (min-width: 690px) {
+    .grid {
+      width: 650px;
+    }
+    .grid .card {
+      margin-right: 10px;
+    }
+    .grid .card:nth-child(2),
+  .grid .card:nth-child(3),
+  .grid .card:nth-child(3n+6) {
+      margin-right: 0;
+    }
+  }
+  @media screen and (min-width: 910px) {
+    .grid {
+      width: 870px;
+    }
+    .grid .card,
+  .grid .card:nth-child(2),
+  .grid .card:nth-child(3),
+  .grid .card:nth-child(3n+6) {
+      margin-right: 10px;
+    }
+    .grid .card:nth-child(3),
+  .grid .card:nth-child(5),
+  .grid .card:nth-child(4n+9) {
+      margin-right: 0;
+    }
+  }
+  @media screen and (min-width: 1130px) {
+    .grid {
+      width: 1090px;
+    }
+    .grid .card:nth-child(3),
+  .grid .card:nth-child(5),
+  .grid .card:nth-child(4n+9) {
+      margin-right: 10px;
+    }
+    .grid .card:nth-child(4),
+  .grid .card:nth-child(7),
+  .grid .card:nth-child(5n+12) {
+      margin-right: 0;
+    }
+  }
+  
+  /*
+   * CSS Grid Layout overrides the previous float layout on supporting browsers
+   */
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 210px);
+    grid-auto-rows: 210px;
+    grid-gap: 10px;
+    justify-content: center;
+  }
+  
+  @supports (display: grid) {
+    .grid {
+      width: auto;
+      max-width: 1090px;
+    }
+    .grid .card {
+      margin: 0 !important;
+    }
+  }
+  @media screen and (min-width: 470px) {
+    .grid .header {
+      grid-row: span 2;
+      grid-column: span 2;
+    }
+  }
+  /*
+   * Cards
+   */
+  .grid .card {
+    transition-property: transform;
+    transition-duration: 0.3s;
+    transition-property: -webkit-transform;
+    transition-property: transform;
+    transition-property: transform, -webkit-transform;
+    background-color: #333;
+  }
+  
+  .grid .card a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+  
+  .grid .card img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+  }
+  
+  .grid .card h2 {
+    margin: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 10px;
+    text-decoration: none;
+    font-family: Raleway, sans-serif;
+    font-weight: normal;
+    font-size: 1em;
+    letter-spacing: 1px;
+    color: #fff;
+    background: rgba(0, 0, 0, 0.2);
+    background: radial-gradient(ellipse at center, transparent 0, rgba(0, 0, 0, 0.36) 100%);
+  }
+  
+  .grid .card:hover {
+    -webkit-transform: scale(0.95);
+    -ms-transform: scale(0.95);
+    transform: scale(0.95);
+  }
+  
+  .grid .header:hover {
+    -webkit-transform: none;
+    -ms-transform: none;
+    transform: none;
+  }
+  
+  /* Focus style as hovering, if possible */
+  .grid .card a:focus {
+    outline: 2px solid #d11ee9;
+  }
+  
+  .grid .card:focus-within {
+    -webkit-transform: scale(0.95);
+    -ms-transform: scale(0.95);
+    transform: scale(0.95);
+  }
+  
+  .grid .card:focus-within a:focus {
+    outline: none;
+  }
+  
+  .grid .header {
+    box-sizing: border-box;
+    text-align: center;
+    padding-top: 23px;
+    font-size: 1.6875em;
+    line-height: 1.3;
+    background: radial-gradient(ellipse at center, transparent 0, rgba(0, 0, 0, 0.48) 100%) #454545;
+  }
+  
+  .grid .header h1 {
+    margin-top: 0;
+    margin-bottom: 0.67em;
+    font-family: "Cherry Swash", cursive;
+    text-transform: capitalize;
+    font-size: 1em;
+    font-weight: normal;
+    padding-left: 28px;
+    padding-right: 28px;
+  }
+  
+  .grid .header p {
+    margin: 0;
+    font-family: "Raleway", sans-serif;
+    font-size: 0.52em;
+    padding-left: 34px;
+    padding-right: 34px;
+    color: #c7c7c7;
+  }
+  
+  @media screen and (min-width: 470px) {
+    .grid .header {
+      font-size: 2.5em;
+      padding-top: 100px;
+    }
+  
+    .grid .header h1 {
+      padding-left: 80px;
+      padding-right: 80px;
+    }
+  
+    .grid .header p {
+      padding-left: 120px;
+      padding-right: 120px;
+    }
+  }
+  .centerize{
+    padding-top: 60px;
+  }
+  /*
+   * Show the used layout method
+   */
+  .notification {
+    position: fixed;
+    top: 0;
+    left: 0;
+    font-family: "Raleway", sans-serif;
+    font-size: 20px;
+    line-height: 30px;
+    padding: 0 20px;
+    background-color: red;
+    color: white;
+    -webkit-animation-name: hide;
+    animation-name: hide;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-delay: 2s;
+    animation-delay: 2s;
+    -webkit-animation-iteration-count: 1;
+    animation-iteration-count: 1;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+  }
+  
+  .notification__grid {
+    display: none;
+  }
+  
+  @supports (display: grid) {
+    .notification__floats {
+      display: none;
+    }
+  
+    .notification__grid {
+      display: block;
+    }
+  }
+  @-webkit-keyframes hide {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+    }
+  }
+  @keyframes hide {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+    }
+  }
