--- a/Styles/main.css
+++ b/Styles/main.css
@@ -296,7 +296,7 @@ background-position: 100% 50%}
   font-weight: 500px;
   padding-left: 11px;
 }
-.row{
+.landing{
   font-family: 'Times New Roman', Times, serif;
   padding-left: 22px;
   color: azure;
@@ -341,7 +341,7 @@ background-position: 100% 50%}
         text-decoration-style: solid;
         font-weight: 500px;
       }
-      .row{
+      .landing{
         color: white;
         padding-left: 19px;
       }
@@ -840,7 +840,7 @@ background-position: 100% 50%}
    * Float layout
    */
   .grid {
-    padding-top: 350px;
+    /* padding-top: 350px; */
     width: 210px;
   }
   .grid .card {
@@ -1112,3 +1112,163 @@ background-position: 100% 50%}
       opacity: 0;
     }
   }
+  /* Footer */
+  .footer-dark {
+    padding:50px ;
+    color:#f0f9ff;
+    background-color:#282d32;
+  }
+  
+  .footer-dark h3 {
+    
+    margin-bottom:12px;
+    font-weight:bold;
+    font-size:16px;
+  }
+  
+  .footer-dark ul {
+  
+    list-style:none;
+    line-height:1.6;
+    font-size:14px;
+    
+  }
+  
+  .footer-dark ul a {
+    color:inherit;
+    text-decoration:none;
+    opacity:0.6;
+  }
+  
+  .footer-dark ul a:hover {
+    opacity:0.8;
+  }
+  
+  @media (max-width:767px) {
+    .footer-dark .item:not(.social) {
+      text-align:center;
+      padding-bottom:20px;
+    }
+  }
+  
+  .footer-dark .item.text {
+    margin-bottom:36px;
+  }
+  
+  @media (max-width:767px) {
+    .footer-dark .item.text {
+      margin-bottom:0;
+    }
+  }
+  
+  .footer-dark .item.text p {
+    opacity:0.6;
+    margin-bottom:0;
+  }
+  
+  .footer-dark .item.social {
+    text-align:center;
+  }
+  
+  @media (max-width:991px) {
+    .footer-dark .item.social {
+      text-align:center;
+      margin-top:20px;
+    }
+  }
+  
+  .footer-dark .item.social > a {
+    font-size:20px;
+    width:36px;
+    height:36px;
+    line-height:36px;
+    display:inline-block;
+    text-align:center;
+    border-radius:50%;
+    box-shadow:0 0 0 1px rgba(255,255,255,0.4);
+    margin:0 8px;
+    color:#fff;
+    opacity:0.75;
+  }
+  
+  .footer-dark .item.social > a:hover {
+    opacity:0.9;
+  }
+  
+  .footer-dark .copyright {
+    text-align:center;
+    padding-top:24px;
+    opacity:0.3;
+    font-size:13px;
+    margin-bottom:0;
+  }
+  .button{
+    background: linear-gradient(95deg, var(--color-primary) 15%, var(--color-tertiary) 45%, var(--color-pink) 75%, var(--color-secondary) 100%) 95%/200% 100%;
+  }
+  
+    h1 {
+    margin: 0 0 20px;
+    font-weight: 400;
+    color: #1c87c9;
+    }
+    p {
+    margin: 0 0 5px;
+    }
+    .main-block {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-image: url(Images/christopher-sardegna-bSmKli4OTIY-unsplash.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    }
+    form {
+      justify-content: left;
+      width: 800px;
+    padding: 25px;
+    margin: 25px;
+    
+    }
+    .fas {
+    margin: 25px 10px 0;
+    font-size: 72px;
+    color: #fff;
+    }
+    .fa-envelope {
+    transform: rotate(-20deg);
+    }
+    .fa-at , .fa-mail-bulk{
+    transform: rotate(10deg);
+    }
+    input, textarea {
+    width: calc(100% - 18px);
+    padding: 8px;
+    margin-bottom: 20px;
+    border: 1px solid #1c87c9;
+    outline: none;
+    border-radius: 10px;
+    }
+    input::placeholder {
+    color: #666;
+    } 
+    
+    @media (min-width: 568px) {
+    .main-block {
+    flex-direction: row;
+    }
+    
+    .fa-envelope {
+    margin-top: 0;
+    margin-left: 20%;
+    }
+    .fa-at {
+    margin-top: -10%;
+    margin-left: 65%;
+    }
+    .fa-mail-bulk {
+    margin-top: 2%;
+    margin-left: 28%;
+    } 
+    }
