--- a/Styles/about.css
+++ b/Styles/about.css
@@ -64,29 +64,32 @@
     margin:0;
   }
   .split{
-    height: 100vh;
-      background: linear-gradient(-45deg,#f5967f,#f4d293,#c1946a,#fdb4be);
-      background-size: 400% 400%;
-      animation: Gradient 15s ease infinite;
+    height: 130vh;
+    background-color:#efcb8d;
       background-repeat: no-repeat;
       box-sizing: border-box;
       }
-      @-webkit-keyframes Gradient{
-      0%{
-      background-position: 0% 50%
-      }
-      50%{
-      background-position: 100% 50%}
-      100%{
-        background-position: 0% 50%;
-      }
-    }
 #about .section_title{
   text-decoration: solid !important;
   text-decoration-color:#f5967f;
 }
-
+#about a::after {
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 2px;
+  right: 0;
+  position: absolute;
+ 
+  width: 0;
+  text-decoration: none;
+}
 #about .bn30 {
+  height: 60px;
+  width: 160px;
+  margin-left: 25px;
+  text-decoration: none;
   border: 5em;
   cursor: pointer;
   outline: none;
@@ -95,7 +98,7 @@
   transform: translate(0);
   background-image: linear-gradient(45deg, #f5967f, #fdb4be);
   padding: 0.7em 2em;
-  border-radius: 65px;
+  border-radius: 100px;
   box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
   -webkit-transition: box-shadow 0.25s;
   transition: box-shadow 0.25s;
@@ -110,7 +113,7 @@
 
 #about .bn30:after {
   content: "";
-  border-radius: 18px;
+  border-radius: 100px;
   position: absolute;
   margin: 4px;
   top: 0;
@@ -122,7 +125,7 @@
 }
 
 #about .bn30:hover {
-  background-image: linear-gradient(-45deg, #050c24, #3f0b0b);
+  background-image: linear-gradient(-45deg, #4568dc, #b06ab3);
   box-shadow: 0 12px 24px rgba(128, 128, 128, 0.1);
 }
 
